--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body {
   padding: 0;
   margin: 0;
   background: #15202b;
+  overflow-x: hidden;
 }
 
 .search-section {
@@ -80,6 +81,16 @@ body {
 .table {
   margin: auto;
   color: white;
+  min-width: 25em;
+}
+
+.table__container {
+  max-height: 20.5em;
+  min-height: 20.5em;
+}
+
+.table__container .MuiTableCell-stickyHeader {
+  background: #1da1f2;
 }
 
 .table .MuiPaper-root {
@@ -89,6 +100,10 @@ body {
 
 .table .MuiTableCell-root {
   color: white;
+}
+
+.table__row:nth-of-type(odd) {
+  background: #38424d;
 }
 
 .table__pagination {
@@ -111,15 +126,30 @@ body {
   background-color: black;
 }
 
+.history-section {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
 .tweets-section {
   height: 100%;
-  padding: 2em;
+  padding: 1em;
   overflow-y: scroll;
-  max-height: 45em;
+  max-height: 47.2em;
+}
+
+.hide {
+  opacity: 0;
+}
+
+.show {
+  opacity: 1;
+  transition: opacity 1s linear;
 }
 
 .tweets-section.MuiPaper-root {
-  background: #1f2b36;
+  background: #253341;
   border-radius: 1em;
 }
 
@@ -129,6 +159,7 @@ body {
   margin-bottom: 0.5em;
   color: white;
   border-radius: 1em;
+  box-shadow: 10px 10px 10px -9px rgba(0, 0, 0, 0.75);
 }
 
 .tweets__avatar img {
@@ -161,17 +192,20 @@ body {
 }
 
 /* width */
-.tweets-section::-webkit-scrollbar {
+.tweets-section::-webkit-scrollbar,
+.table__container::-webkit-scrollbar {
   display: none;
 }
 
 /* Track */
-.tweets-section::-webkit-scrollbar-track {
+.tweets-section::-webkit-scrollbar,
+.table__container::-webkit-scrollbar-track {
   display: none;
 }
 
 /* Handle */
-.tweets-section::-webkit-scrollbar-thumb {
+.tweets-section::-webkit-scrollbar,
+.table__container::-webkit-scrollbar-thumb {
   display: none;
 }
 
