--- a/src/index.css
+++ b/src/index.css
@@ -192,6 +192,10 @@ body {
   opacity: 0;
 }
 
+.hidden {
+  display: none;
+}
+
 .show {
   opacity: 1;
   transition: opacity 1s linear;
@@ -247,8 +251,6 @@ body {
 
 .alert-box {
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
 }
@@ -256,7 +258,7 @@ body {
 .alert-box__error {
   text-align: center;
   width: 15em;
-  height: 1.5em;
+  height: fit-content;
   border-radius: 1em;
   background: rgba(255, 60, 60, 0.63);
   position: absolute;
@@ -264,44 +266,31 @@ body {
   color: #a5c7c7;
   padding: 0.3em;
   padding-top: 10px;
-  transform: translateY(-3em);
+  transform: translateY(-8em);
   transition: 0.5s;
+  z-index: 999;
 }
 
 .alert-box__error.show-alert {
   transition: 0.5s;
-  transform: translateY(0);
+  transform: translateY(-3em);
 }
 
-.alert-box__sentiment {
-  width: 25em;
-  height: 22em;
-  border-radius: 0.5em;
+.information-box {
   position: absolute;
-  right: 0;
-  color: #a5c7c7;
-  padding: 0.3em;
-  transition: 0.5s;
-  transform: translateX(23.5em);
+  width: 50%;
+  min-height: 100px;
+  right: 25%;
+  top: 35%;
+  text-align: center;
+  background-color: #1a242e;
 }
 
-.alert-box__sentiment-section {
-  display: grid;
-  height: 100%;
-  grid-template-columns: 1fr 3fr;
-  place-items: center;
-}
-
-.alert-box__sentiment-section button {
-  position: absolute;
-  border-radius: 0;
-  z-index: 100;
-  color: #1890ff !important;
-}
-
-.alert-box__sentiment.show-sentiment {
-  transition: 0.5s ease-in;
-  transform: translateX(0);
+.information-box p {
+  padding: 1em;
+  margin: 0;
+  color: rgb(190, 190, 190);
+  background-color: #1a242e;
 }
 
 /* width */
