--- a/src/index.css
+++ b/src/index.css
@@ -250,30 +250,79 @@ body {
 }
 
 .alert-box {
+  background: rgb(253, 55, 55);
+  padding: 1em 2em;
+  min-width: 20em;
   position: absolute;
-  width: 100%;
-  height: 100%;
+  right: 0;
+  top: 1.5em;
+  border-radius: 0.2em;
+  border-left: 1em solid black;
 }
 
-.alert-box__error {
-  text-align: center;
-  width: 15em;
-  height: fit-content;
+.alert-box .fa-exclamation-circle {
+  position: absolute;
+  left: 1em;
+  font-size: 1.5em;
+  transform: translateY(-50%);
+  top: 50%;
+}
+
+.alert-box__content {
+  padding: 0 2em;
+}
+
+.alert-box__close-button {
+  position: absolute;
+  right: 1em;
+  top: 50%;
+  padding: 1em;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
+.alert-box__close-button:hover {
+  transition: 0.5s ease-in-out;
+  background: rgb(179, 41, 41);
+}
+
+.alert-box.show {
+  animation: slide 1s ease forwards;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(0%);
+  }
+  10% {
+    transform: translateX(-10%);
+  }
+  80% {
+    transform: translateX(-10%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+
+.live-query-section {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  background-color: #1890ff;
+  min-width: 20em;
   border-radius: 1em;
-  background: rgba(255, 60, 60, 0.63);
-  position: absolute;
-  left: 45%;
-  color: #a5c7c7;
-  padding: 0.3em;
-  padding-top: 10px;
-  transform: translateY(-8em);
-  transition: 0.5s;
-  z-index: 999;
+  top: 20%;
+  transform: translateX(-90%);
+  z-index: 1000;
 }
 
-.alert-box__error.show-alert {
-  transition: 0.5s;
-  transform: translateY(-3em);
+.live-query-section.showQuery {
+  transform: translateX(0);
+}
+
+.live-query-section__table {
+  flex-grow: 3;
 }
 
 .information-box {
